--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,7 @@ before_install:
 - npm install -g grunt-cli
 - npm install -g bower
 - bower install
+- npm install -g typings
+- typings install dt~jasmine --save --global
 script:
 - grunt build
