--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
   "version": "0.0.0",
   "dependencies": {},
   "devDependencies": {
-    "grunt": "^0.4.4",
-    "grunt-typescript": "^0.6.1",
-    "grunt-contrib-copy": "^0.5.0",
-    "grunt-open": "^0.2.3",
-    "grunt-contrib-connect": "^0.7.1",
     "connect-livereload": "^0.3.2",
+    "grunt": "^0.4.4",
+    "grunt-contrib-connect": "^0.7.1",
+    "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-karma": "^2.0.0",
+    "grunt-open": "^0.2.3",
+    "grunt-typescript": "^0.6.1",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.5.0",
+    "karma-jasmine": "^1.1.0",
+    "karma-phantomjs-launcher": "^1.0.4",
     "typescript": "^1.4.1"
   }
 }
