--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "karma": "^1.5.0",
     "karma-jasmine": "^1.1.0",
     "karma-phantomjs-launcher": "^1.0.4",
+    "karma-spec-reporter": "0.0.30",
     "typescript": "^1.4.1"
   }
 }
