--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "web-blackjack",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.15.2"
+  },
   "devDependencies": {
     "connect-livereload": "^0.3.2",
     "grunt": "^0.4.4",
