Added configuration for heroku deploy

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "web-blackjack",
   "version": "0.0.0",
   "scripts": {
-    "start" : "node server.js"
+    "start" : "grunt build ;node server.js"
   },
   "dependencies": {
     "express": "^4.15.2",
