--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "web-blackjack",
   "version": "0.0.0",
   "scripts": {
-    "start" : "grunt build ;node server.js"
+    "start" : "node server.js"
   },
+  "engines": {
+    "node": "6.9.4",
+    "npm": "4.1.2"
+  }
   "dependencies": {
     "express": "^4.15.2",
     "requirejs": "^2.3.3"
