--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "web-blackjack",
   "version": "0.0.0",
   "scripts": {
-    "start" : "node server.js"
+    "start" : "grunt build; node server.js"
   },
   "engines": {
     "node": "6.9.4",
@@ -10,7 +10,21 @@
   },
   "dependencies": {
     "express": "^4.15.2",
-    "requirejs": "^2.3.3"
+    "requirejs": "^2.3.3",
+    "connect-livereload": "^0.3.2",
+    "grunt": "^0.4.4",
+    "grunt-contrib-connect": "^0.7.1",
+    "grunt-contrib-copy": "^0.5.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-karma": "^2.0.0",
+    "grunt-open": "^0.2.3",
+    "grunt-typescript": "^0.6.1",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.5.0",
+    "karma-jasmine": "^1.1.0",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-spec-reporter": "0.0.30",
+    "typescript": "^1.4.1"
   },
   "devDependencies": {
     "connect-livereload": "^0.3.2",
