--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
   "version": "0.0.0",
   "scripts": {
     "postinstall": "grunt build",
-    "start" : "node server.js"
+    "start": "node server.js"
   },
   "engines": {
     "node": "6.9.4",
     "npm": "4.1.2"
   },
   "dependencies": {
-    "express": "^4.15.2",
-    "requirejs": "^2.3.3",
     "connect-livereload": "^0.3.2",
+    "express": "^4.15.2",
     "grunt": "^0.4.4",
+    "grunt-cli": "^1.2.0",
     "grunt-contrib-connect": "^0.7.1",
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-watch": "^0.6.1",
@@ -25,6 +25,7 @@
     "karma-jasmine": "^1.1.0",
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-spec-reporter": "0.0.30",
+    "requirejs": "^2.3.3",
     "typescript": "^1.4.1"
   },
   "devDependencies": {
