--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "web-blackjack",
   "version": "0.0.0",
   "scripts": {
-    "postinstall": "grunt build",
+    "postinstall": "grunt build; typings install dt~jasmine --save",
     "start": "node server.js"
   },
   "engines": {
@@ -10,6 +10,7 @@
     "npm": "4.1.2"
   },
   "dependencies": {
+    "bower": "^1.8.0",
     "connect-livereload": "^0.3.2",
     "express": "^4.15.2",
     "grunt": "^0.4.4",
@@ -26,7 +27,8 @@
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-spec-reporter": "0.0.30",
     "requirejs": "^2.3.3",
-    "typescript": "^1.4.1"
+    "typescript": "^1.4.1",
+    "typings": "^2.1.0"
   },
   "devDependencies": {
     "connect-livereload": "^0.3.2",
