--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "grunt-cli": "^1.2.0",
     "grunt-contrib-connect": "^0.7.1",
     "grunt-contrib-copy": "^0.5.0",
+    "grunt-contrib-less": "^1.4.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-karma": "^2.0.0",
     "grunt-open": "^0.2.3",
