--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "typings": "^2.1.0"
   },
   "devDependencies": {
+    "babel-polyfill": "^6.23.0",
     "connect-livereload": "^0.3.2",
+    "es6-module-loader": "^0.17.11",
+    "es6-promise": "^4.1.0",
     "grunt": "^0.4.4",
     "grunt-contrib-connect": "^0.7.1",
     "grunt-contrib-copy": "^0.5.0",
@@ -45,6 +48,10 @@
     "karma-jasmine": "^1.1.0",
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-spec-reporter": "0.0.30",
+    "karma-systemjs": "^0.16.0",
+    "systemjs": "^0.19.24",
+    "systemjs-plugin-babel": "0.0.21",
+    "traceur": "0.0.111",
     "typescript": "^1.4.1"
   }
 }
