--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "karma-jasmine": "^1.1.0",
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-spec-reporter": "0.0.30",
+    "lodash": "^4.17.4",
     "requirejs": "^2.3.3",
     "typescript": "^1.4.1",
     "typings": "^2.1.0"
