--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "karma-spec-reporter": "0.0.30",
     "lodash": "^4.17.4",
     "requirejs": "^2.3.3",
-    "typescript": "^1.4.1",
+    "typescript": "^1.8.0",
     "typings": "^2.1.0"
   },
   "devDependencies": {
@@ -43,6 +43,8 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-karma": "^2.0.0",
     "grunt-open": "^0.2.3",
+    "grunt-remove": "^0.1.0",
+    "grunt-require": "^1.1.2",
     "grunt-typescript": "^0.6.1",
     "jasmine-core": "^2.5.2",
     "karma": "^1.5.0",
@@ -53,6 +55,6 @@
     "systemjs": "^0.19.24",
     "systemjs-plugin-babel": "0.0.21",
     "traceur": "0.0.111",
-    "typescript": "^1.4.1"
+    "typescript": "^1.8.0"
   }
 }
