--- a/package.json
+++ b/package.json
@@ -1,47 +1,29 @@
 {
   "name": "web-blackjack",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "main": "index.js",
   "scripts": {
-    "postinstall": "bower install; grunt build; typings install dt~jasmine --save --global",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "typings install dt~jasmine --save --global",
     "start": "node server.js"
   },
   "engines": {
     "node": "6.9.4",
     "npm": "4.1.2"
   },
-  "dependencies": {
-    "bower": "^1.8.0",
-    "connect-livereload": "^0.3.2",
-    "express": "^4.15.2",
-    "grunt": "^0.4.4",
-    "grunt-cli": "^1.2.0",
-    "grunt-contrib-connect": "^0.7.1",
-    "grunt-contrib-copy": "^0.5.0",
-    "grunt-contrib-less": "^1.4.1",
-    "grunt-remove": "^0.1.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-open": "^0.2.3",
-    "grunt-typescript": "^0.6.1",
-    "requirejs": "^2.3.3",
-    "typescript": "^1.8.0",
-    "typings": "^2.1.0"
-  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "devDependencies": {
-    "babel-polyfill": "^6.23.0",
-    "connect-livereload": "^0.3.2",
-    "es6-module-loader": "^0.17.11",
-    "es6-promise": "^4.1.0",
-    "grunt": "^0.4.4",
-    "grunt-contrib-connect": "^0.7.1",
-    "grunt-contrib-copy": "^0.5.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-open": "^0.2.3",
-    "grunt-remove": "^0.1.0",
-    "grunt-require": "^1.1.2",
-    "grunt-typescript": "^0.6.1",
-    "systemjs": "^0.19.24",
-    "systemjs-plugin-babel": "0.0.21",
-    "traceur": "0.0.111",
-    "typescript": "^1.8.0"
+    "@types/lodash": "^4.14.64",
+    "express": "^4.15.2",
+    "jquery": "^3.2.1",
+    "ts-loader": "^2.1.0",
+    "typescript": "^2.3.3",
+    "webpack": "^2.6.1"
+  },
+  "dependencies": {
+    "phaser": "^2.6.2"
   }
 }
