--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "typings install dt~jasmine --save --global",
-    "start": "node server.js"
+    "start": "webpack; node server.js"
   },
   "engines": {
     "node": "6.9.4",
@@ -17,8 +17,14 @@
   "description": "",
   "devDependencies": {
     "@types/lodash": "^4.14.64",
+    "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.28.3",
     "express": "^4.15.2",
+    "file-loader": "^0.11.1",
+    "html-webpack-plugin": "^2.28.0",
     "jquery": "^3.2.1",
+    "less-loader": "^4.0.3",
+    "style-loader": "^0.18.1",
     "ts-loader": "^2.1.0",
     "typescript": "^2.3.3",
     "webpack": "^2.6.1"
