--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "typings install dt~jasmine --save --global; npm install -g webpack",
+    "postinstall": "typings install dt~jasmine --save --global; npm install -g webpack; npm install --dev",
     "start": "webpack; node server.js"
   },
   "engines": {
