--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,6 @@ before_install:
 - npm install -g typescript
 - npm install -g typings
 - npm install -g webpack
+- npm install --only=dev
 script:
-- npm
+- npm start
