--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "typings install dt~jasmine --save --global; npm install -g webpack;",
+    "build": "webpack",
     "start": "webpack; node server.js"
   },
   "engines": {
