--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "jquery": "^3.2.1",
+    "less": "^2.7.2",
     "less-loader": "^4.0.3",
     "style-loader": "^0.18.1",
     "ts-loader": "^2.1.0",
