--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "typings install dt~jasmine --save --global; npm install -g webpack;",
     "build": "webpack",
-    "start": "webpack; node server.js"
+    "start": "npm run install --only=dev; npm install; webpack; node server.js"
   },
   "engines": {
     "node": "6.9.4",
