--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "postinstall": "typings install dt~jasmine --save --global; npm install -g webpack;",
     "build": "webpack",
     "prestart": "npm install --only=dev; npm install; webpack",
+    "heroku-postbuild": "webpack -p --config ./webpack.config.js --progress",
     "start": "node server.js"
   },
   "engines": {
