--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "typings install dt~jasmine --save --global; npm install -g webpack;",
+    "postinstall": "typings install dt~jasmine --save --global; npm install -g webpack;npm install --only=dev;",
     "build": "webpack",
-    "prestart": "npm install --only=dev; npm install; webpack",
     "heroku-postbuild": "webpack -p --config ./webpack.config.js --progress",
     "start": "node server.js"
   },
