--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "typings install dt~jasmine --save --global; npm install -g webpack;npm install --only=dev;",
+    "preinstall": "export NODE_ENV=development",
+    "postinstall": "typings install dt~jasmine --save --global;",
     "build": "webpack",
     "heroku-postbuild": "webpack -p --config ./webpack.config.js --progress",
     "start": "node server.js"
