--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,20 @@
 language: node_js
 node_js:
-- "6"
+- '6'
 before_install:
 - npm install -g typescript
 - npm install -g typings
 - npm install -g webpack
 - npm install --only=dev
-script:
-- npm run build
+jobs:
+  include:
+    - stage: build application
+      script: npm run build
+    - stage: deploy to heroku
+      deploy:
+        provider: heroku
+        api_key:
+          secure: $HEROKU_AUTH_KEY
+        app: web-blackjack-game
+        on:
+          repo: Nevaan/web-blackjack
